# homework8-2

./: CMakeLists.txt  Error.cpp  Error.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  Triangle_three_sides_equal.cpp  Triangle_three_sides_equal.h  Triangle_two_sides_equal.cpp  Triangle_two_sides_equal.h  figure.cpp  figure.h  main.cpp  rectangle_triangle.cpp  rectangle_triangle.h
